--- a/system.html
+++ b/system.html
@@ -40,14 +40,29 @@
     <hr/>
   <div class="list-group">
     <a href="#" class="list-group-item active">
-      <h4 class="list-group-item-heading">All about Eve: Execute-Verify Replication for Multi-Core Servers, (OSDI 2012)</h4>
-      <p class="list-group-item-text">1 December 2016</p>
-      <p class="list-group-item-text">Loan Ton</p>
+      <h4 class="list-group-item-heading">High-Throughput Subset Matching on Commodity GPU-Based Systems</h4>
+      <p class="list-group-item-text">13 April 2017</p>
+      <p class="list-group-item-text">Daniele Rogora</p>
+    </a>
+    <a href="#" class="list-group-item">
+      <h4 class="list-group-item-heading">Distributed B+ Tree on top of GeoPaxos</h4>
+      <p class="list-group-item-text">8 April 2017</p>
+      <p class="list-group-item-text">Paulo Coelho</p>
+    </a>
+    <a href="#" class="list-group-item">
+      <h4 class="list-group-item-heading">Whippersnapper: A P4 Language Benchmark Suite</h4>
+      <p class="list-group-item-text">23 March 2017</p>
+      <p class="list-group-item-text">Huynh Tu Dang</p>
     </a>
     <a href="#" class="list-group-item">
       <h4 class="list-group-item-heading">From Distributed Programming to Big Data Analytics</h4>
       <p class="list-group-item-text">24 November 2016</p>
       <p class="list-group-item-text">Patrick Eugster (Guest)</p>
+    </a>
+    <a href="#" class="list-group-item">
+      <h4 class="list-group-item-heading">All about Eve: Execute-Verify Replication for Multi-Core Servers, (OSDI 2012)</h4>
+      <p class="list-group-item-text">1 December 2016</p>
+      <p class="list-group-item-text">Loan Ton</p>
     </a>
     <a href="#" class="list-group-item">
       <h4 class="list-group-item-heading">Just say NO to Paxos overhead:
