--- a/index.html
+++ b/index.html
@@ -75,6 +75,17 @@
           <a href="https://sites.google.com/site/hermenierfabien/" target="_blank">Fabien Hermenier</a>
         </div>
       </div>
+      <div class="panel panel-default"><a name="news"></a>
+       <div class="panel-heading">
+         <h3 class="panel-title">News</h3>
+       </div>
+       <div class="panel-body">
+            <ul>
+                <li> June, 2017: Summer internship at San Disk, Western Digital
+                <li>April - May, 2017: Visiting Cambridge, working on interfacing NetFPGA with SSD drive
+            </ul>
+        </div>
+      </div>
      <div class="panel panel-default"><a name="teaching"></a>
     <div class="panel-heading">
       <h3 class="panel-title">Teaching Assistant</h3>
