--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
        </div>
        <div class="panel-body">
             <ul>
-                <li> June, 2017: Summer internship at San Disk, Western Digital
+                <li> June, 2017: Summer internship at SanDisk, Western Digital (WD)
                 <li>April - May, 2017: Visiting Cambridge, working on interfacing NetFPGA with SSD drive
             </ul>
         </div>
