--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </nav>
 
   <div class="container">
-  	<div class="page-header">  
+  	<div class="page-header">
       <div class="col">
         <div class="col-xs-9 col-md-9 col-lg-9">
           <address>
@@ -43,8 +43,8 @@
          </address>
          <address>
             <a href="https://ch.linkedin.com/in/tu-dang-580b6a23"><img class="page-menu-link-icon" src="images/linkedin.png" width="40" height="40" alt="Tu Dang's linkedin" /></a>
-            <a href="https://github.com/tudang"><img class="page-menu-link-icon" src="images/github.png" width="50" height="50" alt="Tu Dang's Github" /></a> 
-            <a href="resources/cv.pdf"><img class="page-menu-link-icon" src="images/cv.png" width="40" height="40" alt="Tu Dang's Curriculum Vitae. Nov. 2016" /></a>
+            <a href="https://github.com/tudang"><img class="page-menu-link-icon" src="images/github.png" width="50" height="50" alt="Tu Dang's Github" /></a>
+            <a href="resources/cv.pdf"><img class="page-menu-link-icon" src="images/cv.png" width="40" height="40" alt="Tu Dang's Curriculum Vitae. Nov. 2018" /> (Nov. 2018)</a>
          </address>
        </div>
 
@@ -55,7 +55,7 @@
       </div>
     </div>
   </div>
-  
+
 <div class="row">
     <div class="col-md-6">
       <div class="panel panel-default"><a name="home"></a>
@@ -65,11 +65,11 @@
        <div class="panel-body">
          I'm a PhD student at USI, under supervision of Prof.
          <a href="http://www.inf.usi.ch/faculty/soule/" target="_blank">Robert Soule</a>
-         and Prof. 
+         and Prof.
          <a href="http://www.inf.usi.ch/faculty/pedone/" target="_blank">Fernando Pedone</a>.
-         Before, I have worked as a teaching assistant for three years at 
-         <a href="http://hcmiu.edu.vn" target="_blank">Ho Chi Minh 
-          International University</a> in Vietnam. 
+         Before, I have worked as a teaching assistant for three years at
+         <a href="http://hcmiu.edu.vn" target="_blank">Ho Chi Minh
+          International University</a> in Vietnam.
           I got my master degree in 2013 at <a href="http://unice.fr" target="_blank">Nice-Sophia Antipolis</a>
           During my internship at OASIS (INRIA, Sophia Antipolis), I worked with Prof.
           <a href="https://sites.google.com/site/hermenierfabien/" target="_blank">Fabien Hermenier</a>
@@ -94,16 +94,16 @@
       <h5>Università dell Svizzera Italiana (USI)</h5>
       <ul>
         <li>Enterprise Resource Planning, 2014, 2015</li>
-        <li>Data Management, 2016</li>
+        <li>Data Management, 2015, 2016</li>
         <li>Advanced Networking, 2016</li>
       </ul>
       <h5>Ho Chi Minh International University (HCMIU)</h5>
       <ul>
-        <li>Operating System, Fall - 2012</li>          
+        <li>Operating System, Fall - 2012</li>
         <li>C/C++ Programming in Linux,  2011</li>
         <li>Object-Oriented Programming, 2011</li>
         <li>Distributed System, 2011</li>
-        <li>Data Structure & Algorithms, 2010</li>          
+        <li>Data Structure & Algorithms, 2010</li>
       </ul>
     </div>
   </div>
@@ -117,26 +117,22 @@
        <div class="panel-body">
           <h5>Current projects</h5>
           <ul>
-            <li><a href ="https://github.com/usi-systems/p4benchmark" target="_blank">Whippersnapper</a>: A P4 Language Benchmark Suite <span class="glyphicon glyphicon-star"></span></li>
+            <li><a href ="https://blog.westerndigital.com/new-breakthrough-main-memory-scale-out/" target="_blank">Consensus for Non-volatile Main Memory</a></li>
+            <li><a href ="https://github.com/usi-systems/p4benchmark" target="_blank">Whippersnapper</a>: A P4 Language Benchmark Suite</li>
             <li><a href ="http://www.inf.usi.ch/faculty/soule/netpaxos.html" target="_blank">NetPaxos</a>: Network-based consensus</li>
-          </ul>
-          <h5>Resources</h5>
-          <ul>
-            <li><a href ="https://drive.google.com/file/d/0B6C-MR5-BVNgRldraWhST2FqTlU/view?usp=sharing" target="_blank">Frenetic VM</a>
-              <!-- <img src="http://www.gifandgif.eu/animated_gif/New/Animated%20Gif%20New%20(63).gif"/> -->
-            </li>
           </ul>
           <h5>Research interests</h5>
           <ul>
            <li>Software Defined Networking</li>
-           <li>Network Management</li>
+           <li>Distributed Systems</li>
+           <li>Big Data</li>
          </ul>
          <h5>Seminars & Conferences</h5>
            <ul>
             <li><a href="https://www.usenix.org/conferences" target="_blank">USENIX</a></li>
             <li><a href="http://www.sigcomm.org/events/" target="_blank">SIGCOMM</a></li>
             <li><a href="https://www.acm.org/upcoming-conferences" target="_blank">ACM</a></li>
-          </ul> 
+          </ul>
         </div>
       </div>
       <div class="panel panel-default"><a name="talks"></a>
