--- a/publications.html
+++ b/publications.html
@@ -30,12 +30,17 @@
 <div class="container">
     <h2>Journals & Conferences</h2>
   <div class="list-group">
-    <a class="list-group-item" href="" target="_blank">
+    <a class="list-group-item" href="http://www.inf.usi.ch/faculty/soule/p4eu2018.pdf" target="_blank">
+      <h4 class="list-group-item-heading">Consensus for Non-volatile Main Memory</h4>
+      <p class="list-group-item-text">Huynh Tu Dang, Jaco Hofmann, Yang Liu, Marjan Radi, Dejan Vucinic, Robert Soule, Fernando Pedone.</p>
+      <p class="list-group-item-text">2018 IEEE 26th International Conference on Network Protocols (ICNP)</p>
+    </a>
+    <a class="list-group-item" href="https://www.cs.princeton.edu/~jrex/papers/whippersnapper17.pdf" target="_blank">
       <h4 class="list-group-item-heading">Whippersnapper: A P4 Language Benchmark Suite</h4>
       <p class="list-group-item-text">Huynh Tu Dang, Han Wang, Theo Jepsen, Gordon Brebner, Changhoon Kim, Jennifer Rexford, Robert Soule, and Hakim Weatherspoon.</p>
       <p class="list-group-item-text">3rd ACM Sigcomm Symposium on SDN Research (SOSR' 17), April 2017</p>
     </a>
-    <a class="list-group-item" href="" target="_blank">
+    <a class="list-group-item" href="https://www.cs.cornell.edu/~jnfoster/papers/p4fpga.pdf" target="_blank">
       <h4 class="list-group-item-heading">P4FPGA: A Rapid Prototyping Framework for P4</h4>
       <p class="list-group-item-text">Han Wang, Robert Soule, Huynh Tu Dang, Ki Suh Lee, Vishal Shrivastav, Nate Foster, and Hakim Weatherspoon.</p>
       <p class="list-group-item-text">3rd ACM Sigcomm Symposium on SDN Research (SOSR' 17), April 2017</p>
@@ -53,31 +58,31 @@
     <a href="#" class="list-group-item">
       <h4 class="list-group-item-heading">Fault Resolution System for Inter-Cloud Environment</h4>
       <p class="list-group-item-text">H.M. Tran, S.V.U. Ha, T.H. Dang, K.V. Huynh</p>
-      <p class="list-group-item-text">Journal of Mobile Multimedia: Advanced Computing 
+      <p class="list-group-item-text">Journal of Mobile Multimedia: Advanced Computing
         Issues in Data and Security Engineering, 10(1&2): 16-29, Rinton Press, 2014.</p>
     </a>
     <a href="http://dl.acm.org/citation.cfm?id=2524226" target="_blank" class="list-group-item">
-      <h4 class="list-group-item-heading">Higher SLA Satisfaction in Datacenters with 
+      <h4 class="list-group-item-heading">Higher SLA Satisfaction in Datacenters with
         Continuous VM Placement Constraints</h4>
       <p class="list-group-item-text">H.T. Dang, F. Hermenier.</p>
-      <p class="list-group-item-text">9th Workshop on Hot Topics in 
+      <p class="list-group-item-text">9th Workshop on Hot Topics in
         Dependable Systems,November 2013, Nemacolin Woodlands Resort (PA), USA</p>
     </a>
     <a href="http://link.springer.com/chapter/10.1007%2F978-3-642-34707-8_8#page-1" class="list-group-item">
-      <h4 class="list-group-item-heading">Applying MapReduce Framework to 
+      <h4 class="list-group-item-heading">Applying MapReduce Framework to
       Peer-to-Peer Computing Applications</h4>
       <p class="list-group-item-text">H.T. Dang, H.M. Tran, P.N. Vu, and A.T. Nguyen</p>
-      <p class="list-group-item-text"> 4th International Conference on Computational Collective Intelligence 
+      <p class="list-group-item-text"> 4th International Conference on Computational Collective Intelligence
         Technologies and Applications (ICCCI 2012), Ho Chi Minh City, November 2012.
         Springer LNAI 7654
         </p>
     </a>
     <a href="#" class="list-group-item">
-      <h4 class="list-group-item-heading">A Cloud-Based HPC Cluster Model for 
+      <h4 class="list-group-item-heading">A Cloud-Based HPC Cluster Model for
       Academic Institution</h4>
       <p class="list-group-item-text">H V Pham, T H Dang</p>
-      <p class="list-group-item-text">  Journal of Science and Technology, Vietnamese Academy of Science and 
-        Technology, ISSN 0866-708X (A special issue on International Conference 
+      <p class="list-group-item-text">  Journal of Science and Technology, Vietnamese Academy of Science and
+        Technology, ISSN 0866-708X (A special issue on International Conference
         on Advanced Computing and Applications 2011)
         </p>
     </a>
@@ -86,6 +91,11 @@
 
 <div class="container">
     <h2>Technical Reports</h2>
+    <a class="list-group-item" href="https://pdfs.semanticscholar.org/b146/9ab10b80f36cef02832bfe12d91f5058bb99.pdf" target="_blank">
+      <h4 class="list-group-item-heading">P4xos Consensus As A Network Service</h4>
+      <p class="list-group-item-text">Huynh Tu Dang, Pietro Bressana, Han Wang, Ki Suh Lee, Noa Zilberman, Hakim Weatherspoon, Marco Canini, Fernando Pedone, and Robert Soule</p>
+      <p class="list-group-item-text">USI Technical Report 2018-01 (USI TR), January 2018</p>
+    </a>
     <a class="list-group-item" href="http://www.inf.usi.ch/faculty/soule/usi-tr-2016-03.pdf" target="_blank">
       <h4 class="list-group-item-heading">Network Hardware-Accelerated Consensus</h4>
       <p class="list-group-item-text">Huynh Tu Dang, Pietro Bressana, Han Wang, Ki Suh Lee, Hakim Weatherspoon, Marco Canini, Fernando Pedone, and Robert Soule</p>
