--- a/system.html
+++ b/system.html
@@ -30,6 +30,7 @@
 <div class="container">
     <h2>System Reading Group</h2>
     <hr/>
+    <a href="https://dslab.inf.usi.ch/reading/"><h3>Moved here</h3></a>
     <h4>Time: every Thursday at 14:00</h4>
     <h4>Location: SI-015 (Informatics building)</h4>
     <h4>Exception: March 30 and May 5 will be SI-013</h4>
