--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
        </div>
        <div class="panel-body">
             <ul>
+                <li> December, 2018: "The Case for In-Network Computing On Demand" to Eurosys'19
                 <li> June, 2017: Summer internship at SanDisk, Western Digital (WD)
                 <li>April - May, 2017: Visiting Cambridge, working on interfacing NetFPGA with SSD drive
             </ul>
