--- a/publications.html
+++ b/publications.html
@@ -30,10 +30,10 @@
 <div class="container">
     <h2>Journals & Conferences</h2>
   <div class="list-group">
-    <a class="list-group-item" href="http://www.inf.usi.ch/faculty/soule/p4eu2018.pdf" target="_blank">
-      <h4 class="list-group-item-heading">Consensus for Non-volatile Main Memory</h4>
-      <p class="list-group-item-text">Huynh Tu Dang, Jaco Hofmann, Yang Liu, Marjan Radi, Dejan Vucinic, Robert Soule, Fernando Pedone.</p>
-      <p class="list-group-item-text">2018 IEEE 26th International Conference on Network Protocols (ICNP)</p>
+    <a class="list-group-item" href="#" target="_blank">
+      <h4 class="list-group-item-heading">The Case for In-Network Computing On Demand</h4>
+      <p class="list-group-item-text">Yuta Tokusashi, Huynh Tu Dang, Fernando Pedone, Robert Soule, Noa Zilberman.</p>
+      <p class="list-group-item-text">2019 European Conference on Computer Systems (Eurosys'19), March 2019</p>
     </a>
     <a class="list-group-item" href="https://www.cs.princeton.edu/~jrex/papers/whippersnapper17.pdf" target="_blank">
       <h4 class="list-group-item-heading">Whippersnapper: A P4 Language Benchmark Suite</h4>
@@ -60,13 +60,6 @@
       <p class="list-group-item-text">H.M. Tran, S.V.U. Ha, T.H. Dang, K.V. Huynh</p>
       <p class="list-group-item-text">Journal of Mobile Multimedia: Advanced Computing
         Issues in Data and Security Engineering, 10(1&2): 16-29, Rinton Press, 2014.</p>
-    </a>
-    <a href="http://dl.acm.org/citation.cfm?id=2524226" target="_blank" class="list-group-item">
-      <h4 class="list-group-item-heading">Higher SLA Satisfaction in Datacenters with
-        Continuous VM Placement Constraints</h4>
-      <p class="list-group-item-text">H.T. Dang, F. Hermenier.</p>
-      <p class="list-group-item-text">9th Workshop on Hot Topics in
-        Dependable Systems,November 2013, Nemacolin Woodlands Resort (PA), USA</p>
     </a>
     <a href="http://link.springer.com/chapter/10.1007%2F978-3-642-34707-8_8#page-1" class="list-group-item">
       <h4 class="list-group-item-heading">Applying MapReduce Framework to
@@ -111,6 +104,18 @@
 
 <div class="container">
     <h2>Workshops</h2>
+    <a class="list-group-item" href="http://www.inf.usi.ch/faculty/soule/p4eu2018.pdf" target="_blank">
+      <h4 class="list-group-item-heading">Consensus for Non-volatile Main Memory</h4>
+      <p class="list-group-item-text">Huynh Tu Dang, Jaco Hofmann, Yang Liu, Marjan Radi, Dejan Vucinic, Robert Soule, Fernando Pedone.</p>
+      <p class="list-group-item-text">2018 IEEE 26th International Conference on Network Protocols (ICNP), September 2018</p>
+    </a>
+    <a href="http://dl.acm.org/citation.cfm?id=2524226" target="_blank" class="list-group-item">
+      <h4 class="list-group-item-heading">Higher SLA Satisfaction in Datacenters with
+        Continuous VM Placement Constraints</h4>
+      <p class="list-group-item-text">H.T. Dang, F. Hermenier.</p>
+      <p class="list-group-item-text">9th Workshop on Hot Topics in
+        Dependable Systems,November 2013, Nemacolin Woodlands Resort (PA), USA</p>
+    </a>
     <a class="list-group-item" href="#" target="_blank">
       <h4 class="list-group-item-heading"></h4>
       <p class="list-group-item-text"></p>
