--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
           <h1 class="mb-0">Huynh Tu
             <span class="text-primary">Dang</span>
           </h1>
-          <div class="subheading mb-5">Via Giuseppe Buffi 13, CH-6904 Lugano, Switzerland · +41-58-666-4455 ext. 2140 ·
-            <a href="mailto:huynh.tu.dang@usi.ch">huynh.tu.dang@usi.ch</a>
+          <div class="subheading mb-5">951 Sandisk Dr, Milpitas, CA 95035 · +1-408-717-8169 ·
+            <a href="mailto:tu.dang@wdc.com">tu.dang@wdc.com</a>
           </div>
           <p class="lead mb-5">I am experienced in leveraging network programmability to improve performance for consensus middlewares in data centers. I love to explore new technologies to solve problems in an innovative way.</p>
           <div class="social-icons">
@@ -98,13 +98,25 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
+              <h3 class="mb-0">Principal Research Engineer</h3>
+              <div class="subheading mb-3">Western Digital, Milpitas CA</div>
+              <p>Designs and Implements OmniXtend, an open networking protocol
+                  for exchanging coherence messages directly with processor caches</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">April 2019 - Present</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
               <h3 class="mb-0">Doctoral Assistant</h3>
               <div class="subheading mb-3">Università della Svizzera italiana, Lugano, Switzerland</div>
               <p>Includes current PhD research, PhD and Masters level coursework and
                 research/consulting projects. Lead weekly system reading group.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">September 2014 - Present</span>
+              <span class="text-primary">September 2014 - March 2019</span>
             </div>
           </div>
 
@@ -280,9 +292,6 @@
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               Silver Medal in Information Technology Graduation Batch, 2010</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              University scholarships for excellent study results, 2006-2010</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               University scholarships for excellent study results, 2006-2010</li>
