--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
               <p>Thesis:  Consensus Protocols Exploiting Network Programmability</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">September 2014 - Present</span>
+              <span class="text-primary">September 2014 - March 2019</span>
             </div>
           </div>
 
