--- a/index.html
+++ b/index.html
@@ -239,10 +239,16 @@
         <div class="my-auto">
           <h2 class="mb-5">Selected Publications</h2>
               <a class="list-group-item-heading" href="#">
+                  <h4 class="list-group-item-next">P4xos: Consensus as a Network Service</h4>
+              </a>
+            <p class="list-group-item-text">Huynh Tu Dang, Pietro Bressana, Han Wang, Ki Suh Lee Noa Zilberman, Hakim Weatherspoon, Marco Canini, Fernando Pedone, Robert Soule</p>
+            <p class="list-group-item-text">To appear at IEEE/ACM Transactions on Networking (ToN)</p>
+
+              <a class="list-group-item-heading" href="https://www.cs.yale.edu/homes/soule/pubs/eurosys2019.pdf">
                   <h4 class="list-group-item-next">The Case for In-Network Computing On Demand</h4>
               </a>
             <p class="list-group-item-text">Yuta Tokusashi, Huynh Tu Dang, Fernando Pedone, Robert Soule, Noa Zilberman.</p>
-            <p class="list-group-item-text">To appear at 2019 European Conference on Computer Systems (Eurosys'19), March 2019</p>
+            <p class="list-group-item-text">European Conference on Computer Systems (Eurosys'19), March 2019</p>
 
             <a class="list-group-item-heading" href="https://www.cs.princeton.edu/~jrex/papers/whippersnapper17.pdf" target="_blank">
                 <h4 class="list-group-item-text">Whippersnapper: A P4 Language Benchmark Suite</h4></a>
@@ -316,17 +322,6 @@
           </ul>
         </div>
       </section>
-
-
-    <!-- <hr class="m-0">
-
-    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
-      <div class="my-auto">
-        <h2 class="mb-5">Interests</h2>
-        <p>Apart from being a distributed system developer, I enjoy most of my time being outdoors. In the winter, I am an average snowboarder. During the summer, I enjoy playing football.</p>
-        <p class="mb-0">I spend a large amount of my free time exploring the latest technology advancements in distributed systems and SDN.</p>
-      </div>
-    </section> -->
 
     </div>
 
