Fixed LinkedIn link

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           </div>
           <p class="lead mb-5">I am experienced in leveraging network programmability to improve performance for consensus middlewares in data centers. I love to explore new technologies to solve problems in an innovative way.</p>
           <div class="social-icons">
-            <a href="https://ch.linkedin.com/in/tu-dang-580b6a23"  target="_blank">
+            <a href="https://www.linkedin.com/in/huynh-tu-dang-580b6a23"  target="_blank">
               <i class="fab fa-linkedin-in"></i>
             </a>
             <a href="https://github.com/tudang" target="_blank">
