--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
           <h1 class="mb-0">Huynh Tu
             <span class="text-primary">Dang</span>
           </h1>
-          <div class="subheading mb-5">951 Sandisk Dr, Milpitas, CA 95035 · +1-408-717-8169 ·
-            <a href="mailto:tu.dang@wdc.com">tu.dang@wdc.com</a>
+          <div class="subheading mb-5">San Jose, CA · (408)-205-4557 -
+            <a href="mailto:tudang87@gmail.com">tudang87@gmail.com</a>
           </div>
           <p class="lead mb-5">I am experienced in leveraging network programmability to improve performance for consensus middlewares in data centers. I love to explore new technologies to solve problems in an innovative way.</p>
           <div class="social-icons">
@@ -107,9 +107,22 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
+              <h3 class="mb-0">Technologist</h3>
+              <div class="subheading mb-3">Western Digital, Milpitas CA</div>
+	      <p>Lead the study and development of new and emerging non-volatile memory technologies, Coherence
+	      protocols and Scale out for memory-centric systems</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">May 2020 - Present</span>
+            </div>
+          </div>
+
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
               <h3 class="mb-0">Principal Research Engineer</h3>
               <div class="subheading mb-3">Western Digital, Milpitas CA</div>
-              <p>Designs and Implements OmniXtend, an open networking protocol
+              <p>Design and Implement OmniXtend, an open networking protocol
                   for exchanging coherence messages directly with processor caches</p>
             </div>
             <div class="resume-date text-md-right">
@@ -121,7 +134,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Doctoral Assistant</h3>
               <div class="subheading mb-3">Università della Svizzera italiana, Lugano, Switzerland</div>
-              <p>Includes current PhD research, PhD and Masters level coursework and
+              <p>Include current PhD research, PhD and Masters level coursework and
                 research/consulting projects. Lead weekly system reading group.</p>
             </div>
             <div class="resume-date text-md-right">
@@ -151,6 +164,7 @@
             </div>
           </div>
 
+	  <!--
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Lecturer</h3>
@@ -183,6 +197,7 @@
               <span class="text-primary">September 2010 - September 2012</span>
             </div>
           </div>
+	  -->
 
         </div>
 
@@ -222,7 +237,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Ho Chi Minh International University (HCMIU), Vietnam</h3>
               <div class="subheading mb-3">Bachelor of Science</div>
-              <div>Computer Science</div>
+              <div>Thesis: NetConf Secured CLI client for network configuration</div>
               <p></p>
             </div>
             <div class="resume-date text-md-right">
