--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <h1 class="mb-0">Huynh Tu
             <span class="text-primary">Dang</span>
           </h1>
-          <div class="subheading mb-5">San Jose, CA · (408)-205-4557 -
+          <div class="subheading mb-5">San Jose, CA -
             <a href="mailto:tudang87@gmail.com">tudang87@gmail.com</a>
           </div>
           <p class="lead mb-5">I am experienced in leveraging network programmability to improve performance for consensus middlewares in data centers. I love to explore new technologies to solve problems in an innovative way.</p>
@@ -88,12 +88,6 @@
             </a>
             <a href="https://github.com/tudang" target="_blank">
               <i class="fab fa-github"></i>
-            </a>
-            <a href="https://twitter.com/huynhtudang" target="_blank">
-              <i class="fab fa-twitter"></i>
-            </a>
-            <a href="resources/cv.pdf" target="_blank">
-              <i class="fab fa-file-download"></i>
             </a>
           </div>
         </div>
