--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <span class="text-primary">Dang</span>
           </h1>
           <div class="subheading mb-5">San Jose, CA -
-            <a href="mailto:tudang87@gmail.com">tudang87@gmail.com</a>
+            <a href="mailto:huynhtu.dang@gmail.com">huynhtu.dang@gmail.com</a>
           </div>
           <p class="lead mb-5">I am experienced in leveraging network programmability to improve performance for consensus middlewares in data centers. I love to explore new technologies to solve problems in an innovative way.</p>
           <div class="social-icons">
